# Brone-IORT-Project-simulation-only-v1

./: .gitignore  README.md  requirements.txt
brone_roda_monitor/: package.xml  setup.cfg  setup.py
brone_roda_monitor/brone_roda_monitor/: __init__.py  roda_dashboard_node.py  roda_demo_publisher.py  roda_gamepad_teleop.py  roda_motion_test.py  roda_serial_controller.py  roda_telemetry_node.py
brone_roda_monitor/config/: cyclonedds_roda.xml
brone_roda_monitor/scripts/: deploy_to_orangepi.sh  start_roda.sh  start_roda_demo.sh  test_gamepad.sh  test_roda_motion.sh
brone_roda_monitor/web/: app.js  index.html
op3_power_monitor/: CODE_REFERENCE.md  README.md  SIMULATION_GUIDE.md  package.xml  setup.cfg  setup.py
op3_power_monitor/op3_power_monitor/: __init__.py  demo_publisher.py  power_dashboard_node.py  power_monitor_node.py  unified_dashboard_node.py
op3_power_monitor/resource/: op3_power_monitor
op3_power_monitor/scripts/: start_demo.sh  start_simulation.sh  start_unified.sh
op3_power_monitor/web/: app.js  index.html  op3.html  roda.html  roda_app.js  roda_style.css  style.css
scripts/: start_grand_simulation.sh
simulation/webots_project/controllers/DITER_Roda_Tahap4_controller/: DITER_Roda_Tahap4_controller.py  brone_battery_state.txt
simulation/webots_project/controllers/DITER_Roda_ros_bridge/: DITER_Roda_ros_bridge.py  diter_sim_gui.py  run_gui.sh
simulation/webots_project/controllers/DITER_roda_tahap2_controller/: DITER_roda_tahap2_controller.py  diter_battery_log.txt
simulation/webots_project/controllers/DITER_roda_tahap3_HardwareMinimal_controller/: DITER_roda_tahap3_HardwareMinimal_controller.py  brone_battery_state.txt
simulation/webots_project/controllers/DITER_roda_tahap3_controller/: DITER_roda_tahap3_controller.py  brone_battery_state.txt
simulation/webots_project/controllers/Diter_Roda_Tahap5_WS_Bridge/: DITER_Roda_ROS_WS_Bridge.py  DITER_Tahap5_WS_Bridge.py  Diter_Roda_Tahap5_WS_Bridge.py  brone_battery_state.txt  (+7 more)
simulation/webots_project/protos/: RodaOmniBrone.proto
simulation/webots_project/worlds/: BroneRodaEstimationClosedBeta.wbt  BroneRodaSimLapangan.wbt  obstacle_check.wbt
(+4 files in other folders)
