<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brone_roda_monitor</name>
  <version>1.0.0</version>
  <description>
    BRone Roda (Omnidirectional Wheel Robot) Power Monitor &amp; Telemetry.
    Provides ROS2 nodes for monitoring wheel torque, battery status,
    and motion data, with a web dashboard interface.
  </description>
  <maintainer email="developer@example.com">BRone Developer</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
