<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>op3_power_monitor</name>
  <version>1.0.0</version>
  <description>
    ROS2 Python node to monitor and track voltage and current from
    all ROBOTIS OP3 components (OpenCR board and Dynamixel servos).
    Subscribes passively to existing topics — no changes to op3_manager.
  </description>
  <maintainer email="developer@example.com">OP3 Developer</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robotis_controller_msgs</exec_depend>
  <exec_depend>python3-tornado</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
